# skeleton_cmake_project

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  arm64.profile  conanfile.py
cmake/: GRPCGenCode.cmake  GenVersion.cmake  GetGRPC.cmake  GetGTest.cmake  GetProtobuf.cmake  NamespaceTool.cmake  ProtobufGenCode.cmake  version.h.in
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/pb_grpc/: CMakeLists.txt
src/examples/pb_grpc/cmd_control_pb_rpc_client_app/: CMakeLists.txt  main.cc
src/examples/pb_grpc/cmd_control_pb_rpc_server_app/: CMakeLists.txt  main.cc
src/protocols/: CMakeLists.txt
src/protocols/grpc/: CMakeLists.txt  CmdControl.proto  grpc.proto
src/protocols/pb/: CMakeLists.txt  pb.proto
